# darglint2

./: .editorconfig  .git-blame-ignore-revs  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTORS.yaml  Design.md  Home.md  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_form.yaml  bug_report.md  config.yml  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: publish-docs.yml  tox.yml
Design/: Makefile  Overview.dot  Overview.md
darglint/: driver.py
darglint/parse/grammars/: google_arguments_section.bnf  google_arguments_section.py  google_long_description.py  google_raises_section.bnf  google_raises_section.py  google_returns_section.py  google_returns_section_without_type.py  google_types.bnf  google_yields_section_without_type.py  numpy_other_arguments_section.bnf  numpy_other_arguments_section.py  numpy_raises_section.bnf  numpy_raises_section.py  numpy_short_description.py  numpy_warns_section.py  sphinx_argument_type_section.py  sphinx_arguments_section.py  sphinx_base.bnf  sphinx_base.py  sphinx_long_description.py  sphinx_returns_section.py  sphinx_short_description.py  sphinx_variable_type_section.py  sphinx_variables_section.py  terminals.bnf
darglint2/: __main__.py  config.py  custom_assert.py  driver.py  error_report.py  errors.py  flake8_entry.py  function_description.py  integrity_checker.py  lex.py  node.py  peaker.py  strictness.py  token.py  utils.py
darglint2/analysis/: abstract_callable_visitor.py  analysis_helpers.py  analysis_visitor.py  argument_visitor.py  assert_visitor.py  function_and_method_visitor.py  function_scoped_visitor.py  raise_visitor.py  return_visitor.py  variable_visitor.py  yield_visitor.py
darglint2/docstring/: base.py  docstring.py  google.py  numpy.py  sections.py  sphinx.py  style.py
darglint2/parse/: cyk.py  google.py  grammar.py  identifiers.py  long_description.py  numpy.py  sphinx.py
darglint2/parse/grammars/: google_arguments_section.py  google_base.bnf  google_long_description.py  google_raises_section.py  google_returns_section.py  google_returns_section_without_type.py  google_short_description.py  google_yields_section.py  google_yields_section_without_type.py  noqa_statement.bnf  numpy_arguments_section.bnf  numpy_arguments_section.py  numpy_long_description.bnf  numpy_long_description.py  numpy_other_arguments_section.py  numpy_raises_section.py  numpy_receives_section.bnf  numpy_receives_section.py  numpy_returns_section.bnf  numpy_returns_section.py  numpy_short_description.bnf  numpy_short_description.py  numpy_warns_section.bnf  numpy_warns_section.py  numpy_yields_section.bnf  numpy_yields_section.py  sphinx_argument_type_section.bnf  sphinx_argument_type_section.py  sphinx_arguments_section.bnf  sphinx_arguments_section.py  sphinx_base.py  sphinx_long_description.py  sphinx_raises_section.bnf  sphinx_raises_section.py  sphinx_return_type_section.bnf  sphinx_return_type_section.py  sphinx_returns_section.bnf  sphinx_returns_section.py  sphinx_short_description.py  sphinx_variable_type_section.bnf  (+7 more)
docker-build/: Makefile
docs/: Makefile  poster.tex
docs/source/: .gitignore  changelog.rst  conf.py  index.rst  license.rst  readme.rst
docs/source/_polyversion/templates/: index.html
docs/source/_static/css/: ext-links.css  version-selector.css
docs/source/_templates/: versioning.html
docs/source/_templates/components/: edit-this-page.html
docs/source/_templates/sidebar/: brand.html
integration_tests/: analysis_tests.py  compatibility.py  end_to_end.py  goldens.py  grammar_size.py  max_golden_profile.py  performance.py  sources.py  test_flake8.py
integration_tests/files/: example-ascii.py  example-latin1.py  example-utf8.py  google_example.py  numpy_example.py  problematic.py  sphinx_example.py  two_spaces.py
static/: ExampleAST.dot  Makefile  Overview.dot  Parsing.dot
tests/: conftest.py  sphinx_docstrings.py  test_abstract_callable_visitor.py  test_analysis_visitor.py  test_argument_visitor.py  test_assert_visitor.py  test_config.py  test_custom_assert.py  test_cyk.py  test_docstring.py  test_error.py  test_error_report.py  test_function_and_method_visitor.py  test_function_description.py  test_function_scoped_visitor.py  test_generated_grammar.py  test_grammar.py  test_identifiers.py  test_integrity_checker.py  test_lex.py  test_long_description_parse.py  test_new_google_parser.py  test_node.py  test_numpy_parser.py  test_parser.py  test_parser_combinator.py  test_peaker.py  test_raise_visitor.py  test_returns_visitor.py  test_sphinx_parser.py  test_variable_visitor.py  test_yield_visitor.py  utils.py
