[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "darglint2"
version = "1.8.2"
description = "A utility for ensuring docstrings stay up to date with the source code."
authors = ["terrencepreilly"]
maintainers = [
    "Antti Kaihola <13725+akaihola@users.noreply.github.com>",
    "yfprojects <real-yfprojects@users.noreply.github.com>",
]
license = "MIT"
repository = "http://github.com/akaihola/darglint2"
documentation = "https://raw.githubusercontent.com/akaihola/darglint2/master/docs/poster.pdf"
keywords = ["documentation", "linter", "development"]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Quality Assurance',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
bnf-to-cnf  = { path = "bin/bnf_to_cnf" }
doc_extract = { path = "bin/doc_extract" }

[tool.poetry.group.lint.dependencies]
flake8     = "^3.7"
mypy       = "^0.812"
pydocstyle = "^4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
tox    = "^4.4.6"

[tool.poetry.scripts]
darglint2 = "darglint2.driver:main"

[tool.poetry.plugins."flake8.extension"]
"DAR" = "darglint2.flake8_entry:DarglintChecker"

[tool.black]
target-version = ['py37']
extend-exclude = ['^integration_tests/files']

[tool.isort]
profile        = "black"
skip_gitignore = true

# tool.flake8 -> tox.ini

[tool.mypy]
packages = "darglint2"
