[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "darglint2"
version = "1.8.2"
description = "A utility for ensuring docstrings stay up to date with the source code."
authors = ["terrencepreilly"]
maintainers = [
    "Antti Kaihola <13725+akaihola@users.noreply.github.com>",
    "yfprojects <real-yfprojects@users.noreply.github.com>",
]
license = "MIT"
repository = "http://github.com/akaihola/darglint2"
documentation = "https://akaihola.github.io/darglint2"
keywords = ["documentation", "linter", "development"]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Quality Assurance',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
bnf-to-cnf  = { path = "bin/bnf_to_cnf", develop = true }
doc_extract = { path = "bin/doc_extract", develop = true }

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8     = "^3.7"
mypy       = "^0.812"
pydocstyle = "^4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
tox    = "^4.4.6"

[tool.poetry.group.polyversion]
optional = true

[tool.poetry.group.polyversion.dependencies]
sphinx_polyversion = { path = "bin/sphinx_polyversion", develop = true }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx                           = "^5.3.0"
sphinx-argparse                  = "^0.3.2"
sphinx-rtd-theme-github-versions = "^1.1"
sphinx-rtd-theme                 = "^1.2.0"
myst-parser                      = "^1.0.0"
sphinx-notfound-page             = "^0.8.3"
sphinx-copybutton                = "^0.5.2"
furo                             = "^2023.3.27"
sphinxext-opengraph              = "^0.8.2"
sphinx-autobuild                 = "^2021.3.14"
sphinx-design                    = "^0.4.1"

[tool.poetry.scripts]
darglint2 = "darglint2.driver:main"

[tool.poetry.plugins."flake8.extension"]
"DAR" = "darglint2.flake8_entry:DarglintChecker"

[tool.black]
target-version = ['py37']
extend-exclude = ['^integration_tests/files']

[tool.isort]
profile        = "black"
skip_gitignore = true

# tool.flake8 -> tox.ini

[tool.mypy]
packages = "darglint2"
